# somali-dialect-classifier

./: .coverage  .dockerignore  .env.example  .gitignore  .gitleaks-usage.md  .gitleaks.toml  .gitleaksignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_VERIFICATION_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DASHBOARD_COORDINATION_SUMMARY.md  DESIGN_SPEC.md  Dockerfile  GITHUB_PAGES_CONFIGURATION.md  GITHUB_PAGES_SETUP.md  LICENSE  Makefile  ORCHESTRATION_REPORT.md  POSTGRES_DEPLOYMENT_SUCCESS.md  PROJECT_CHARTER.md  README.md  WEBSITE_IMPROVEMENTS.md  coverage.json  deploy_postgres.sh  docker-compose.yml  index.html  metrics_analysis.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements-lock.txt  test-results-full.txt  test-summary.txt  test_refactoring.py
.archive/: 2025-10-20_DASHBOARD_RECOMMENDATIONS.md  2025-10-20_EXECUTIVE_SUMMARY.md  2025-10-20_FILE_NAMING_ISSUES_ANALYSIS.md  2025-10-20_METRICS_ANALYSIS_REPORT.md  2025-10-20_QUICK_START_DASHBOARD.md
.archive/documentation/: DASHBOARD_CHANGELOG_20251027.md  README.md  dashboard-features-status_20251027.md
.archive/scripts/: investigate_sprakbankensom.py
.backups/nov2-data-20251110-104659/: CLEANUP-REPORT.txt
.claude/reports/: _registry.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  data_source.md  feature_request.md
.github/workflows/: ci.yml  dashboard-metrics.yml  dashboard-tests.yml  dashboard-validation.yml  deploy-dashboard-enhanced.yml  deploy-dashboard-v2.yml  deploy-dashboard.yml  deployment-health-check.yml  scheduled-backup.yml  secret-scan.yml  update-dashboard-metrics.yml
_site/data/: all_metrics.json  reports.json  summary.json
_site/reports/: 20251020_113158_wikipedia_somali_25f51859_final_quality_report.md  20251020_113336_sprakbanken_somali_a86b54a3_final_quality_report.md
analysis/: architecture-analysis.md  data-viz-analysis.md  enhancement-plan.md  ux-ui-analysis.md
config/prometheus/: alerts.yml  prometheus.yml  targets.json
dashboard/: CHART_ENHANCEMENTS.md  IMPLEMENTATION_QUICKSTART.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  README_VISUALIZATIONS.md  VISUALIZATION_SPECIFICATIONS.md  VISUAL_MOCKUPS.md  advanced-charts.js  app.py  build-site.sh  chart-config-enhanced.js  chart-utils.js  clear-old-data.sh  comparison-mode.js  enhanced-charts.css  enhanced-charts.js  example-integration.html  export-manager.js  filter-manager.js  index-advanced.html  requirements.txt  test-bug-fixes.js  test-integration.js  test-quality-insights-standalone.js  test-quality-insights.js  theme-manager.js
dashboard/css/: main.css
dashboard/data/: cache_summary.json  filter_catalog.json  manifest_analytics.json  pipeline_alerts.json  pipeline_observations.json  pipeline_run_history.json  quality_alerts.json  quality_waivers.json  quota_status.json  sla_targets.json  source_catalog.json
dashboard/js/: config.js  main.js
dashboard/templates/: index.html
data/: tiktok_test_url.txt  tiktok_urls.txt  tiktok_urls_production.txt
data/manifests/: run_20251110_054425_004.json  run_20251111_054425_003.json  run_20251112_054425_002.json  run_20251113_054425_001.json  run_20251114_054425_000.json  run_20251127_175417_5939d251.json
data/metrics/: .gitkeep  20251021_113613_wikipedia_somali_36fc6f34_download.json  20251021_113613_wikipedia_somali_36fc6f34_extraction.json  20251021_113613_wikipedia_somali_36fc6f34_processing.json  20251021_113641_bbc_somali_efac82d1_discovery.json  20251021_113641_bbc_somali_efac82d1_extraction.json  20251021_113641_bbc_somali_efac82d1_processing.json  20251021_113704_huggingface_somali_c4_so_782790e8_discovery.json  20251021_113704_huggingface_somali_c4_so_782790e8_extraction.json  (+181 more)
docker/: Dockerfile
docs/: API_REFERENCE.md  CICD_DASHBOARD.md  CICD_QUICK_REFERENCE.md  DATA_PIPELINE.md  DOCUMENTATION_BEST_PRACTICES.md  FILTER_FRAMEWORK_DESIGN.md  METRICS_SCHEMA_CONTRACT.md  README.md  REFACTORING_SUMMARY.md  TESTING.md  index.md
docs/guides/: dashboard.md  (+11 more)
examples/: aggregate_metrics_workflow.py  aggregation_demo.py
migrations/: 001_initial_schema.sql  002_pipeline_runs_table.sql  README.md
notebooks/: filter_analytics.ipynb
scripts/: README_DATA_COLLECTION.md  analyze_metrics.py  backup_system.py  check_metrics_anomalies.py  compact_ledger_duplicates.py  deduplicate_silver.py  deduplicate_silver_dataset.py  demo_log_redaction.py  export_dashboard_data.py  export_filter_catalog.py  export_filters_to_parquet.py  export_quota_dashboard_data.py  generate_advanced_viz_data.py  generate_consolidated_metrics.py  generate_dashboard_html.py  generate_enhanced_metrics.py  generate_quality_feed.py  migrate_ledger_states.py  migrate_silver_sidecars.py  migrate_sqlite_to_postgres.py  query_filter_history.py  record_pipeline_run.py  reproduce_phase1.sh  restore_system.py  resume_bbc_pipeline.py  run-local.sh  setup-gitleaks-hook.sh  test_backend_features.py  validate_deduplication.py  validate_metrics.py  validate_metrics_schema.py  verify_cicd_setup.sh  verify_silver_e2e.py
tests/: README.md  conftest.py  test_aggregation.py  test_backup_system.py  test_base_pipeline_contract.py  test_bbc_integration.py  test_campaign_scale_config.py  test_campaign_wiring.py  test_checkpoint_recovery.py  test_cli_e2e.py  test_concurrent_runs.py  test_dashboard_deployer.py  test_dedup_config.py  test_deduplication_integration.py  test_disk_space.py  test_enhanced_schema.py  test_file_dedup.py  test_file_dedup_performance.py  test_filters.py  test_force_reprocessing.py  test_foundation.py  test_hf_integration.py  test_hf_processor.py  test_incremental_processing.py  test_ingestion_contract.py  test_ledger_incremental.py  test_low_fixes_group1.py  test_low_fixes_group2.py  test_low_fixes_group3.py  test_manifest_writer.py  test_medium_fixes_group1.py  test_medium_fixes_group2.py  test_medium_fixes_group3.py  test_metrics_consolidation.py  test_metrics_phase1.py  test_metrics_phase2_phase3.py  test_orchestration_flows.py  test_processor_registry.py  test_quota_system.py  test_record_utils.py  (+8 more)
(+789 files in other folders)
